using fixed threadpool, removing completablefuture